[package]
name = "espo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
hex = "0.4.3"
rocksdb = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
alkanes-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
protobuf = "3.7.2"
protobuf-json-mapping = "3.7.2"
serde_json = "1.0.143"
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net"] }
bitcoin = "0.32.7"
electrum-client = "0.24.0"
